rnsc/tests/snapshots/error-lexer-integers-huge_overflow_wasm.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.code 10000000000000000000000000000000000000000
----- STDERR -----
Error: invalid integer
   ╭─[ test_data/integration/error/lexer/integers/huge_overflow.rns:1:7 ]
   │
 1 │ .code 10000000000000000000000000000000000000000
   │       ────────────────────┬────────────────────  
   │                           ╰────────────────────── '10000000000000000000000000000000000000000' is not a valid integer
   │ 
   │ Note: Integers must be between -2147483648 and 2147483647
───╯
----- HASH -----
not generated
