rnsc/tests/snapshots/error-lexer-strings-unterminated_string_after_escape_with_newline.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public Test
"String with backslash escape followed by newline \
.end
----- STDERR -----
Error: unterminated string literal
   ╭─[ test_data/integration/error/lexer/strings/unterminated_string_after_escape_with_newline.rns:2:1 ]
   │
 2 │ "String with backslash escape followed by newline \
   │ ┬  
   │ ╰── this string literal is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
----- HASH -----
not generated
